gcc/testsuite/gfortran.dg/lto/20091015-1_2.f
@@ -1,0 +1,5 @@
+      program test
+      common/main1/ eps(2)
+      dimension cor6d(2,2)
+      call dalie6s(iqmod6,1,wx,cor6d)
+      end
